fix code overflow scroll

--- a/themes/hugo-rocinante/assets/css/rocinante.scss
+++ b/themes/hugo-rocinante/assets/css/rocinante.scss
@@ -102,11 +102,6 @@ code {
   font-family: SFMono-Regular, Consolas, "Liberation Mono", Menlo, monospace;
   border-radius: 3px;
   overflow-x: auto;
-  white-space: pre-wrap;
-  white-space: -moz-pre-wrap;
-  white-space: -pre-wrap;
-  white-space: -o-pre-wrap;
-  word-wrap: break-word;
 }
 code {
   background: #f9f9f9;
@@ -180,7 +175,7 @@ sup {
 }
 
 main {
-  max-width: 740px;
+  max-width: 650px;
   padding: 0 20px;
   margin: 0 auto;
 }
@@ -192,7 +187,7 @@ header {
 }
 
 header h2 {
-   a {
+  a {
     text-decoration: none;
     border: none;
     color: #77f !important;
